# web_crawler

./: Cargo.toml  README.txt  crawler.rs  main.rs
src/: crawler.rs  main.rs
