[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
url = "2.2"
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
error-chain = "0.12"
log = "0.4"
env_logger = "0.9"